<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/add_review"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_review"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:isIndicator="false"
        android:numStars="5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/yes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/no"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
