<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_image_search_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/trip_title"
        android:layout_marginTop="5dp"
        android:background="@color/bg_tint"
        android:padding="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <Button
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/click_to_pick_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/about"
        android:background="@color/bg_tint"
        android:padding="16dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />


    <LinearLayout
        android:id="@+id/levelLL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about">

        <TextView
            android:id="@+id/levelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dp"
            android:text="@string/trip_difficult_level" />

        <NumberPicker
            android:id="@+id/level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text=""
            app:layout_constraintHorizontal_bias="0.5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/waterLL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelLL">

        <CheckBox
            android:id="@+id/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/trip_contains_water" />
    </LinearLayout>

    <Button
        android:id="@+id/saveTrip"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:padding="16dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waterLL" />

</androidx.constraintlayout.widget.ConstraintLayout>